# gpr_software

./: .gitignore  .qmake.conf  2026-06-09-175542-this-session-is-being-continued-from-a-previous-c.txt  CLAUDE.md  CMakeLists.txt  MyQtApp.pro  app.rc.in  debug_log.txt  debug_log2.txt  profiles.xml  劳雷探地雷达处理软件算法.MD  测试用例.md
.claude/: settings.json  settings.local.json
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: MainWindow.cpp.A4F02C7A9F70045B.idx  MainWindow.h.13CA9F9E072AB2E5.idx  QCheckBox.0CF9DE9045B1C85F.idx  QCloseEvent.03FDF11F840099AE.idx  QContextMenuEvent.5985D694E764BA91.idx  QCoreApplication.5B6DCFD5D97689CF.idx  QDataStream.D617DAD448C635B7.idx  QDesktopServices.114085E31F41ADE2.idx  QDir.A2F97D8C4AD0BCED.idx  (+311 more)
AI/train_workspace/: dataset_stats.txt  export.py  organize.py  train.py
AI/train_workspace/dataset/: train.cache  val.cache
include/: MainWindow.h  version.h
installer/: MyQtApp.iss
qml/: Sphere.qml
resources/: lut1.txt  lut10.txt  lut11.txt  lut12.txt  lut13.txt  lut14.txt  lut15.txt  lut16.txt  lut17.txt  lut18.txt  lut19.txt  lut1_bk.txt  lut2.txt  lut20.txt  lut21.txt  lut22.txt  lut23.txt  lut24.txt  lut25.txt  lut26.txt  lut27.txt  lut28.txt  lut29.txt  lut2_bk.txt  lut3.txt  lut30.txt  lut4.txt  lut5.txt  lut6.txt  lut7.txt  lut8.txt  lut9.txt
src/: MainWindow.cpp  MainWindow.cpp.backup  MainWindow.ui  main.cpp
test_input_raw_files/: PRV01__072 - 副本.DZX  PRV01__072 P_1.DZT  PRV01__072 P_1.DZX  PRV01__072.BII  PRV01__072.DZT  PRV01__072.DZX  PRV01__073 P_1.DZT  PRV01__073 P_1.DZX  PRV01__073.DZT  PRV01__073.DZX  YT__001.DZX  YT__002.DZX
test_input_raw_files/DZX格式反推测试/: PROJ__001.DZX  PROJ__002.DZX  PROJ__003.DZX  PROJ__004.DZX  PROJ__005.DZX  PROJ__006.DZX  PROJ__007.DZX  PROJ__008.DZX  PROJ__009.DZX  PROJ__010.DZX  PROJ__011.DZX  PROJ__012.DZX  PROJ__013.DZX  PROJ__014.DZX  PROJ__015.DZX  PROJ__016.DZX  PROJ__017.DZX  参数.md
test_input_raw_files/Proc/: PRV01__072 P_1.DZT  PRV01__072 P_1.DZX  PRV01__072 P_11.DZT  PRV01__072 P_11.DZX  PRV01__072 P_2.DZT  PRV01__072 P_2.DZX  PRV01__072 P_21.BII  PRV01__072 P_21.DZT  PRV01__072 P_21.DZX  PRV01__072 P_211.DZX  PRV01__072 P_3.DZT  PRV01__072 P_3.DZX  PRV01__072 P_4.DZT  PRV01__072 P_4.DZX  PRV01__072 P_5.DZT  PRV01__072 P_5.DZX  PRV01__072 P_6.DZT  PRV01__072 P_6.DZX  PRV01__072 P_7.DZT  PRV01__072 P_7.DZX  PRV01__072 P_8.DZT  PRV01__072 P_8.DZX  PRV01__072 P_9.DZT  PRV01__072 P_9.DZX  PRV01__072 P_A.DZT  PRV01__072 P_A.DZX  PRV01__072 P_B.DZT  PRV01__072 P_B.DZX  PRV01__072 P_C.DZT  PRV01__072 P_C.DZX  PRV01__072 P_D.DZT  PRV01__072 P_D.DZX  PRV01__072 P_E.DZT  PRV01__072 P_E.DZX  PRV01__072 P_F.DZT  PRV01__072 P_F.DZX  PRV01__072_P13.DZX  PRV01__072_p04.DZT  PRV01__072_p06.DZT  PRV01__072_p07.DZT  (+9 more)
test_input_raw_files/Proc/proc/: PRV01__072_p10_p01.DZT  PRV01__072_p11_p01.DZT
test_input_raw_files/after/: PRV01__072.eic  PRV01__072.rst
test_input_raw_files/after/处理/: PRV01__072_p01.eic  PRV01__072_p01.mtd  PRV01__072_p02.eic  PRV01__072_p02.mtd  PRV01__072_p03.eic  PRV01__072_p03.mtd  PRV01__072_p04.eic  PRV01__072_p04.mtd  PRV01__072_p05.eic  PRV01__072_p05.mtd  PRV01__072_p06.eic  PRV01__072_p06.mtd
(+2681 files in other folders)
